fix: badgeGap 수정

--- a/components/Card/UXCardview.module.css
+++ b/components/Card/UXCardview.module.css
@@ -78,7 +78,7 @@
 }
 
 .badgeGap + .badgeGap {
-	margin-top: 10px;
+	margin-top: 6px;
 }
 
 
